--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/spinner": "^2.1.0",
     "@phosphor-icons/react": "^2.0.13",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
     "react-social-login-buttons": "^3.9.1",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.21.5",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
