--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/menu": "^2.2.1",
+    "@chakra-ui/react": "^2.8.1",
     "@chakra-ui/spinner": "^2.1.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@phosphor-icons/react": "^2.0.13",
     "axios": "^1.6.0",
     "firebase": "^10.5.0",
+    "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
