--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.17.0",
     "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^9.1.3",
