--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@phosphor-icons/react": "^2.0.13",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.6.0",
     "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
