--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
   "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
-  "cleanUrls": true
+  "cleanUrls": true,
+
+  "routes": [
+    { "src": "/", "dest": "/" },
+    { "src": "/products/:id", "dest": "/" },
+    { "src": "/favorites", "dest": "/" },
+    { "src": "/coffees", "dest": "/" },
+    { "src": "/equipments", "dest": "/" },
+    { "src": "/drinks", "dest": "/" },
+    { "src": "/about", "dest": "/" }
+  ]
 }
