Trying to fix deploy [6]

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,4 @@
 {
-  "routes": [
-    { "src": "/", "dest": "/" },
-    { "src": "/products/:id", "dest": "/products/:id" },
-    { "src": "/favorites", "dest": "/favorites" },
-    { "src": "/coffees", "dest": "/coffees" },
-    { "src": "/equipments", "dest": "/equipments" },
-    { "src": "/drinks", "dest": "/drinks" },
-    { "src": "/about", "dest": "/about" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "cleanUrls": true
 }
